[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/principalDificeis.gd" type="Script" id=1]
[ext_resource path="res://imagens/icon.png" type="Texture" id=2]
[ext_resource path="res://cenas/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://cenas/PerguntasDificeis.tscn" type="PackedScene" id=4]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
fruta1Path = NodePath("Botões/Fruta1/SpriteFruta1")
fruta2Path = NodePath("Botões/Fruta2/SpriteFruta2")
fruta3Path = NodePath("Botões/Fruta3/SpriteFruta3")
fruta4Path = NodePath("Botões/Fruta4/SpriteFruta4")
fruta5Path = NodePath("Botões/Fruta5/SpriteFruta5")
fruta6Path = NodePath("Botões/Fruta6/SpriteFruta6")
perguntasDificeisPath = NodePath("PerguntasDificeis")
timerPath = NodePath("Timer")

[node name="Botões" type="CanvasLayer" parent="."]

[node name="Fruta1" type="Button" parent="Botões"]
margin_left = 604.522
margin_top = 85.6803
margin_right = 759.522
margin_bottom = 220.68

[node name="SpriteFruta1" type="Sprite" parent="Botões/Fruta1"]
position = Vector2( 83.3004, 70.6069 )
scale = Vector2( 1.57021, 1.57021 )
texture = ExtResource( 2 )

[node name="Fruta2" type="Button" parent="Botões"]
margin_left = 797.0
margin_top = 87.0
margin_right = 949.0
margin_bottom = 225.0

[node name="SpriteFruta2" type="Sprite" parent="Botões/Fruta2"]
position = Vector2( 83.3004, 70.6069 )
scale = Vector2( 1.57021, 1.57021 )
texture = ExtResource( 2 )

[node name="Fruta3" type="Button" parent="Botões"]
margin_left = 606.109
margin_top = 257.041
margin_right = 761.109
margin_bottom = 392.041

[node name="SpriteFruta3" type="Sprite" parent="Botões/Fruta3"]
position = Vector2( 83.3004, 70.6069 )
scale = Vector2( 1.57021, 1.57021 )
texture = ExtResource( 2 )

[node name="Fruta4" type="Button" parent="Botões"]
margin_left = 796.509
margin_top = 257.041
margin_right = 951.509
margin_bottom = 392.041

[node name="SpriteFruta4" type="Sprite" parent="Botões/Fruta4"]
position = Vector2( 83.3004, 70.6069 )
scale = Vector2( 1.57021, 1.57021 )
texture = ExtResource( 2 )

[node name="Fruta5" type="Button" parent="Botões"]
margin_left = 606.109
margin_top = 418.881
margin_right = 761.109
margin_bottom = 553.881

[node name="SpriteFruta5" type="Sprite" parent="Botões/Fruta5"]
position = Vector2( 83.3004, 70.6069 )
scale = Vector2( 1.57021, 1.57021 )
texture = ExtResource( 2 )

[node name="Fruta6" type="Button" parent="Botões"]
margin_left = 793.336
margin_top = 422.055
margin_right = 948.336
margin_bottom = 557.055

[node name="SpriteFruta6" type="Sprite" parent="Botões/Fruta6"]
position = Vector2( 83.3004, 70.6069 )
scale = Vector2( 1.57021, 1.57021 )
texture = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 3 )]
layer = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="PerguntasDificeis" parent="." instance=ExtResource( 4 )]
[connection signal="button_up" from="Botões/Fruta1" to="." method="_on_Fruta1_button_up"]
[connection signal="button_up" from="Botões/Fruta2" to="." method="_on_Fruta2_button_up"]
[connection signal="button_up" from="Botões/Fruta3" to="." method="_on_Fruta3_button_up"]
[connection signal="button_up" from="Botões/Fruta4" to="." method="_on_Fruta4_button_up"]
[connection signal="button_up" from="Botões/Fruta5" to="." method="_on_Fruta5_button_up"]
[connection signal="button_up" from="Botões/Fruta6" to="." method="_on_Fruta6_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
